<resources>
    <string name="app_name">P2P1Eugenia212</string>
    <string name="RMasculino">Masculino</string>
    <string name="RFemenino">Femenino</string>
    <string name="btnMensaje">Mensaje</string>
    <string name="letrero1">Numero num1</string>
    <string name="letrero2">Numero num2</string>
    <string name="msuma">Suma</string>
    <string name="mresta">Resta</string>
    <string name="mmultilplicacion">Multiplicacion</string>
    <string name="mdivision">Division</string>
</resources>
