<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rmasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RMasculino" />

        <RadioButton
            android:id="@+id/rfemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RFemenino" />
    </RadioGroup>

    <Button
        android:id="@+id/btnmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:onClick="mensaje"
        android:text="@string/btnMensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/letrero1"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmensaje" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/letrero2"
        android:inputType="numberSigned"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum1" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="278dp"
        android:layout_height="132dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnum2">

        <RadioButton
            android:id="@+id/rsuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="operaciones"
            android:text="@string/msuma" />

        <RadioButton
            android:id="@+id/rresta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="operaciones"
            android:text="@string/mresta" />

        <RadioButton
            android:id="@+id/rmultiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="operaciones"
            android:text="@string/mmultilplicacion" />

        <RadioButton
            android:id="@+id/rdivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="operaciones"
            android:text="@string/mdivision" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginTop="72dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
</androidx.constraintlayout.widget.ConstraintLayout>